argo/apps/gerundium-brand-voting-app/prod/patch-rollout-strategy.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: gerundium-brand-voting-app
spec:
  replicas: 5
  strategy:
    blueGreen: null
    canary:
      canaryService: gerundium-brand-voting-app-preview
      stableService: gerundium-brand-voting-app
      trafficRouting:
        nginx:
          stableIngress: gerundium-brand-voting-app
      steps:
      - setCanaryScale:
          replicas: 3
      - setWeight: 20
      - pause:
          duration: 10s
      - setWeight: 40
      - pause:
          duration: 10s
      - setWeight: 60
      - pause:
          duration: 10s
      - setWeight: 80
      - pause:
          duration: 10s
      - setWeight: 100
