argo/apps/gerundium-brand-voting-app/prod/preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gerundium-brand-voting-app-preview
spec:
  ports:
  - name: "8501"
    nodePort: 30012
    port: 8501
    protocol: TCP
    targetPort: 8501
  type: NodePort
