argo/apps/gerundium-brand-voting-app/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gerundium-brand-voting-app
spec:
  ports:
  - name: "80"
    nodePort: 30011
    port: 8501
    protocol: TCP
    targetPort: 8501
  type: NodePort
